--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     --color-bg : #1f2641;
     --color-bg1 : #424890;
 
-    --transition: all 0.6s ease;
+    --transition: all 0.5s ease;
 
     --padding-top : 70px;
     --padding-buttom : 70px;
@@ -27,6 +27,7 @@
 body{
     font-family: 'Lexend', sans-serif;
     background-color: var(--color-bg);
+    background-image: url(../images/background\ texture.psd);
     padding: 0;
 }
 html{
@@ -165,7 +166,7 @@ img{
         width: 100%;
         height: 80px;
         opacity: 0;
-        animation: animate 5s linear forwards;
+        animation: animate 0.5s linear forwards;
         transform-origin: top right;
     }
 
@@ -174,15 +175,15 @@ img{
     }
 
     .nav .contaneir .links li:nth-child(2) {
-        animation-duration: 2s;
+        animation-duration: 1.5s;
     }
 
     .nav .contaneir .links li:nth-child(3) {
-        animation-duration: 3s;
+        animation-duration: 2s;
     }
 
     .nav .contaneir .links li:nth-child(4) {
-        animation-duration: 3s;
+        animation-duration: 2.5s;
     }
 
     /* aniamtions  */
@@ -587,12 +588,18 @@ img{
     line-height: 1.7;
     font-size: 14px;
 }
+@media(max-width: 767px){
+    .footer .contaneir .links ul{
+        margin-right: 38px;
+    }
+}
 .footer .contaneir .links ul li{
     margin-bottom: 15px;
 }
 .footer .contaneir .links ul a{
     color: var(--color-light);
     margin-bottom: 10px;
+    font-size: 18px;
 }
 .footer .contaneir .primacy p{
     color: var(--color-light);
@@ -776,11 +783,17 @@ img{
     background-color: transparent;
     border: 1px solid var(--color-light);
 }
+.our-team .contaneir .team-boxs .team:hover img{
+    filter: none;
+}
 .our-team .contaneir .team-boxs .team img{
     width: 150px;
     height: 150px;
     border-radius: 7px;
     margin: 10px auto;
+    filter: brightness(
+        0.5
+    );
 }
 .our-team .contaneir .team-boxs .team h5 {
     color: var(--color-white);
@@ -816,6 +829,127 @@ img{
 }
 
 /* end our-team section  */
-
-
 /* end about page   */
+
+/* start contant-us page  */
+.contant-us{
+    padding-top: var(--padding-top);
+    padding-bottom: var(--padding-buttom);
+}
+.contant-us .contaneir{
+    background-color: var(--color-primary);
+    padding: 20px;
+    display: grid;
+    height: 70vh;
+    grid-template-columns: 40% 60%;
+    gap: 20px;
+    margin: 10px auto;
+    border-radius: 6px;
+}
+/* madia tablet screen  */
+@media screen and (max-width:1024px) {
+    .contant-us .contaneir{
+        height: auto;
+        gap: 10px;
+    }
+}
+/* madia mobile screen  */
+@media screen and (max-width:600px) {
+    .contant-us .contaneir {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 5px;
+        padding: 0;
+        margin-top: 21px;
+    }
+}
+.contant-us .contaneir .contact-info{
+    padding: 15px;
+    background-color: var(--color-bg1);
+    bottom: 40px;
+    border-radius: 6px;
+    position: relative;
+}
+@media screen and (max-width:1024px) {
+    .contant-us .contaneir .contact-info {
+        bottom: 0;
+    }
+}
+.contant-us .contaneir .contact-info img{
+    width: 200px;
+}
+
+.contant-us .contaneir .contact-info h3{
+    color: var(--color-white);
+    margin: 10px 0 ;
+}
+.contant-us .contaneir .contact-info p{
+    color: var(--color-light);
+    line-height: 1.7;
+    font-size: 13px;
+    margin: 0 0 10px;
+}
+.contant-us .contaneir .contact-info .social i{
+    color: var(--color-bg);
+    font-size: 17px;
+    margin: 0 10px 20px 0;
+}
+.contant-us .contaneir .contact-info .social span{
+    color: var(--color-light);
+} 
+
+.contant-us .contaneir .form  form input,
+.contant-us .contaneir .form form textarea{
+    background-color: var(--color-bg);
+    color: var(--color-white);
+    padding: 15px;
+    width: 200px;
+    margin: 10px;
+    outline: none;
+    border: 1px solid var(--color-light);
+    border-radius: 6px;
+    transition: var(--transition);
+}
+    .contant-us .contaneir .form form textarea {
+        width: 300px;
+}
+/* mobile screen */
+@media screen and (max-width:600px) {
+    .contant-us .contaneir .form form input[type="text"] {
+        display: block;
+        width: 85%;
+    }
+    .contant-us .contaneir .form form textarea {
+        width: 85%;
+}
+    
+}
+.contant-us .contaneir .form form input:hover,
+.contant-us .contaneir .form form textarea:hover{
+    box-shadow: 4px 4px 25px #1f2641;
+}
+.contant-us .contaneir .form form input::placeholder{
+    color: var(--color-light);
+}
+.contant-us .contaneir .form form input[type="email"]{
+    width: 85%;
+}
+.contant-us .contaneir .form form textarea{
+    height: 150px;
+    resize: none;
+}
+.contant-us .contaneir .form form .btn{
+    display: block;
+    padding: 15px 15px;
+    background-color: var(--color-danger);
+    color: var(--color-light);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 10px;
+    transition: var(--transition);
+}
+.contant-us .contaneir .form form .btn:hover{
+    background-color: transparent;
+    border: 1px solid var(--color-white);
+}
+/* end contant-us page  */
